renamed ml to mailingList

--- a/styles/index.less
+++ b/styles/index.less
@@ -7,19 +7,19 @@
   resize: vertical;
 }
 
-.ml-actions-buttons {
+.mailingList-actions-buttons {
   z-index: 100;
 }
 
-.ml-name-form {
+.mailingList-name-form {
   z-index: 99;
 }
 
-@ml-panel-height: 200px;
+@mailingList-panel-height: 200px;
 
-.ml-new-panel {
-  min-height: @ml-panel-height;
-  max-height: @ml-panel-height;
+.mailingList-new-panel {
+  min-height: @mailingList-panel-height;
+  max-height: @mailingList-panel-height;
   text-align: center;
   color: @gray-lighter;
   :hover {
@@ -28,7 +28,7 @@
   }
 }
 
-.ml-new {
-  line-height: @ml-panel-height - @panel-body-padding*2;
+.mailingList-new {
+  line-height: @mailingList-panel-height - @panel-body-padding*2;
   font-size: 6em;
 }
