--- a/styles/index.less
+++ b/styles/index.less
@@ -10,6 +10,10 @@
   z-index: 99;
 }
 
+.mailing-list-registration-action {
+  margin-right: 10px;
+}
+
 @mailingList-panel-height: 200px;
 
 .mailingList-new-panel {
